--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,10 @@
     "name": "peej/tonic",
     "description": "The RESTful Web App PHP Micro-Framework",
     "homepage": "http://peej.github.com/tonic",
+    "license": "MIT",
     "require": {
-        "php": ">=5.3"
-    }
+        "php": ">=5.3.0"
+    },
     "autoload": {
         "psr-0": {
             "Tonic": "src/"
