--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,26 @@
 {
     "name": "peej/tonic",
     "description": "The RESTful Web App PHP Micro-Framework",
+    "keywords": ["rest", "microframework"],
     "homepage": "http://peej.github.com/tonic",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Paul James",
+            "email": "paul@peej.co.uk"
+        }
+    ],
     "require": {
         "php": ">=5.3.0"
     },
     "autoload": {
         "psr-0": {
             "Tonic": "src/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "3.0.x-dev"
         }
     }
 }
