Added Behat as dev requirement

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,13 @@
     "require": {
         "php": ">=5.3.0"
     },
+    "require-dev": {
+        "behat/behat": "2.*"
+    },
+    "suggest": {
+        "pimple/pimple": "A simple dependancy injection container to handle your services",
+        "smarty/smarty": "PHP templating engine for building response representations"
+    }
     "autoload": {
         "psr-0": {
             "Tonic": "src/"
