--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
+        "phpspec/phpspec": "1.*",
         "behat/behat": "2.*"
     },
     "suggest": {
