--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: php
 php:
   - 5.3
   - 5.4
-before_install: wget https://github.com/downloads/Behat/Behat/behat.phar
-script: php behat.phar
+before_install:
+  - wget https://github.com/downloads/Behat/Behat/behat.phar
+  - pear install pear.phpspec.net/PHPSpec
+script:
+  - php behat.phar
+  - phpspec spec
