--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ php:
   - 5.3
   - 5.4
 before_install:
-  - wget https://github.com/downloads/Behat/Behat/behat.phar
-  - pear install pear.phpspec.net/PHPSpec
+  - composer install --dev
 script:
   - php behat.phar
   - phpspec spec
