--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "1.*",
+        "phpspec/phpspec": "dev-master",
         "behat/behat": "2.*"
     },
     "suggest": {
