Updated PHPDoctor ini to ignore specs, issues and the dispatcher

--- a/phpdoctor.ini
+++ b/phpdoctor.ini
@@ -1,7 +1,7 @@
 ; Tonic configuration file for PHPDoctor
 
 files = "*.php"
-ignore = ".git,features"
+ignore = ".git,features,spec,issues,dispatch.php"
 doclet = standard
 default_package = "Tonic"
 overview = README.markdown
