--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,15 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "dev-master",
+        "phpspec/phpspec": "1.*",
         "behat/behat": "2.*"
     },
     "suggest": {
         "pimple/pimple": "A simple dependancy injection container to handle your services",
         "smarty/smarty": "PHP templating engine for building response representations"
+    },
+    "config": {
+        "bin-dir": "bin"
     },
     "autoload": {
         "psr-0": {
