--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ php:
   - 5.3
   - 5.4
 before_script:
-  - sh -c "if $TRAVIS_SECURE_ENV_VARS; then php composer.phar config github-oauth.github.com $GITHUB_TOKEN; fi"
+  - sh -c "if $TRAVIS_SECURE_ENV_VARS; then composer config github-oauth.github.com $GITHUB_TOKEN; fi"
   - composer install --dev
 script:
   - php vendor/behat/behat/bin/behat
