--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ php:
   - 5.3
   - 5.4
 before_script:
-  - sh -c "if $TRAVIS_SECURE_ENV_VARS; then composer config github-oauth.github.com $GITHUB_TOKEN; fi"
+  - mkdir ~/.composer
+  - echo '{ "config": { "github-oauth": { "github.com": "'$GITHUB_TOKEN'" } } }' > ~/.composer/config.json
   - composer install --dev
 script:
   - php vendor/behat/behat/bin/behat
