--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "1.*",
-        "phpspec/phpspec2": "dev-master",
+        "phpspec/phpspec": "2.0.*@dev",
         "behat/behat": "2.*",
         "peej/phpdoctor": "dev-master"
     },
@@ -26,7 +25,8 @@
     "bin": ["web/dispatch.php"],
     "autoload": {
         "psr-0": {
-            "Tonic": "src/"
+            "Tonic": "src/",
+            "Tyrell": "src/"
         }
     }
 }
