--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ php:
 before_script:
   - composer install --dev --prefer-source
 script:
-  - php bin/behat
-  - php bin/phpspec run
+  - php vendor/behat/behat/bin/behat
+  - php vendor/phpspec/phpspec/bin/phpspec run
